deployment/ci.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triptastic-deployment
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: triptastic
  template:
    metadata:
      labels:
        app: triptastic
    spec:
      containers:
        - name: triptastic
          image: ghcr.io/jsaady/triptasticweb:sha-2e85490
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: gh-pull-secret

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triptastic-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "prod-do"
spec:
  tls:
    - hosts:
        - triptastic-ci.holyham.dev
      secretName: triptastic-prod-tls
  rules:
    - host: triptastic-ci.holyham.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: triptastic-service
                port:
                  number: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: triptastic-service
spec:
  selector:
    app: triptastic
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: ankane/pgvector:latest
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "256Mi"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
